# whatsapp-wrapped

./: .gitignore  README.md  constants.py  display.py  docker-compose.yml  main.py  main_copy.py  out.txt  parser.py  pyproject.toml  roasts.py  stats.py
backend/: .env.example  Dockerfile  celery_worker.py  gunicorn.conf.py  requirements.txt  run.py  schema.sql
backend/api/: index.py
backend/app/: __init__.py  app.py  config.py  extensions.py
backend/app/models/: job.py
backend/app/routes/: __init__.py  health.py  stats.py  upload.py
backend/app/services/: __init__.py  ai.py  cache.py  processor.py  prompts.py  storage.py
backend/app/tasks/: __init__.py  processing.py
backend/app/utils/: security.py
backend/core/: parser.py  prompts.py  stats.py
cli/: display.py  main.py
core/: __init__.py  constants.py  parser.py  roasts.py
frontend/: package-lock.json  package.json
frontend/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/app/lib/: cache.ts
frontend/app/select/: page.tsx
frontend/app/wrapped/: page.tsx
